tests/rosetta/out/Fortran/csv-to-html-translation-1.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program csv_to_html_translation_1
  implicit none
  character(len=100) :: c
  integer, allocatable, dimension(:) :: rows
  integer :: line
  integer :: i0
    integer, allocatable, dimension(:) :: app1
  integer :: row
  integer :: i2
    character(len=100) :: cells
    integer :: cell
    integer :: i3
  c = trim(trim(trim(trim('Character,Speech'//char(10)//'' // 'The multitude,The messiah! Show us the messiah!'//char(10)//'') // 'Brians mother,<angry>Now you listen here! He''s not the messiah; he''s a very naughty boy! Now go away!</angry>'//char(10)//'') // 'The multitude,Who are you?'//char(10)//'') // 'Brians mother,I''m his mother; that''s who!'//char(10)//'') // 'The multitude,Behold his mother! Behold his mother!'
  allocate(rows(0))
  do i0 = 1, size(split(c,''//char(10)//''))
    line = split(c,''//char(10)//'')(i0)
    if (allocated(app1)) deallocate(app1)
    allocate(app1(size(rows)+1))
    app1(1:size(rows)) = rows
    app1(size(rows)+1) = split(line,',')
    rows = app1
  end do
  print *, '<table>'
  do i2 = 1, size(rows)
    row = rows(i2)
    cells = ''
    do i3 = 1, size(row)
      cell = row(i3)
      cells = trim(trim(cells // '<td>') // cell) // '</td>'
    end do
    print *, trim('    <tr>' // cells) // '</tr>'
  end do
  print *, '</table>'
end program csv_to_html_translation_1
